# teachinlathe

./: README.md  pyproject.toml  teachinlathe_designer.sh  teachinlathe_launcher.sh
conversational/: program1.json
debian/: control  rules
src/teachinlathe/: AxisPlot.qml  AxisPlot2.qml  MainWindow_ui.py  TestQml.py  __init__.py  chucks.yml  feed_helper.py  fixtures.py  lathe_fixtures.json  lathe_hal_component.py  machine_limits.py  mainwindow.py  manual_lathe.py  teachinlathe.yml  turning_helper.py
src/teachinlathe/conversational/: data_types.py
src/teachinlathe/resources/: resources.qrc  resources_rc.py
src/teachinlathe/ui/: mainwindow.ui  mainwindow_ui.py  style.qss
src/teachinlathe/widgets/: QFlowLayout.py  Test.py  __init__.py  joystick.qml  joystick2.qml  joystick_status.py  joystick_status.ui  lathe_tool_table.py  main.qml  numpad_dialog.ui  numpad_dialog_ui.py  smart_numpad_dialog.py  teachin_lathe_dro.py  teachin_lathe_dro.ui  teachin_lathe_dro_ui.py
src/teachinlathe/widgets/conversational/: conversational.py  conversational.ui  conversational_ui.py  facing_detail.py  facing_detail.ui  facing_detail_widget.py  header_detail.py  header_detail.ui  header_detail_widget.py  profiling_detail.py  profiling_detail.ui  profiling_detail_widget.py  program_details_widget.py  program_item.py  program_item.ui  program_item_widget.py  program_loader.py  tool_change_detail.py  tool_change_detail.ui  (+1 more)
subroutines/: boring.ngc  chamfer.ngc  drilling.ngc  facing.ngc  keyslot.ngc  knurling.ngc  radius.ngc  threading.ngc  touch_off_x.ngc  touch_off_z.ngc  turning.ngc
(+13 files in other folders)
